@@ -13,8 +13,6 @@ repositories {
     mavenCentral()
 }
 
-val junitVersion = "5.10.2"
-
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
@@ -23,6 +21,7 @@ java {
 
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
+    modularity.inferModulePath.set(true)
 }
 
 application {
@@ -43,12 +42,31 @@ dependencies {
     }
     implementation("com.google.zxing:core:3.5.3")
     implementation("com.google.zxing:javase:3.5.3")
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    
+    testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    
+    testImplementation("org.testfx:testfx-core:4.0.17")
+    testImplementation("org.testfx:testfx-junit5:4.0.17")
+    
+    testImplementation("org.hamcrest:hamcrest:2.2")
 }
 
 tasks.withType<Test> {
     useJUnitPlatform()
+}
+
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs = listOf(
+        "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED",
+        "--add-opens=javafx.graphics/javafx.scene.control=ALL-UNNAMED",
+        "--add-opens=javafx.base/javafx.beans=ALL-UNNAMED",
+        "--add-reads", "org.example.exhibitly=org.junit.jupiter.api,org.testfx.junit5,org.testfx.core",
+        "--add-opens=org.example.exhibitly/org.example.exhibitly.controller=ALL-UNNAMED",
+        "--add-opens=org.example.exhibitly/org.example.exhibitly.models=ALL-UNNAMED",
+        "--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED"
+    )
 }
 
 jlink {
